--- a/app.json
+++ b/app.json
@@ -1,23 +1,39 @@
 {
   "pages": [
     "pages/index/index",
+    "pages/activity/index",
+    "pages/shop/index",
+    "pages/personcenter/index",
     "pages/logs/logs"
   ],
-  "window": {
-    "navigationBarTitleText": "Demo"
+  "tabBar": {
+    "list": [
+      {
+        "pagePath": "pages/index/index",
+        "text": "首页",
+        "iconPath": "/image/icon_component.png",
+      "selectedIconPath": "/image/icon_component_HL.png"
+      },
+      {
+        "pagePath": "pages/activity/index",
+        "text": "活动",
+        "iconPath": "/image/icon_API.png",
+        "selectedIconPath": "/image/icon_API_HL.png"
+      },
+      {
+        "pagePath": "pages/shop/index",
+        "text": "商城",
+        "iconPath": "/image/icon_component.png",
+        "selectedIconPath": "/image/icon_component_HL.png"
+      },
+      {
+        "pagePath": "pages/personcenter/index",
+        "text": "个人中心",
+        "iconPath": "/image/icon_component.png",
+        "selectedIconPath": "/image/icon_component_HL.png"
+      }
+    ]
   },
-    "tabBar": {
-      "list": [
-        {
-          "pagePath": "pages/index/index",
-          "text": "首页"
-        },
-        {
-          "pagePath": "pages/logs/logs",
-          "text": "日志"
-        }
-      ]
-    },
   "window": {
     "backgroundTextStyle": "light",
     "navigationBarBackgroundColor": "#fff",
