样式图片修改
样式图片修改

--- a/app.json
+++ b/app.json
@@ -35,6 +35,7 @@
     ]
   },
   "window": {
+    "backgroundColor":"#eeeeee",
     "backgroundTextStyle": "light",
     "navigationBarBackgroundColor": "#fff",
     "navigationBarTitleText": "WeChat",
