--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "pages": [
     "pages/index/index",
-    "pages/activity/index",
+    "pages/kind/index",
     "pages/shop/index",
     "pages/personcenter/index",
     "pages/logs/logs"
@@ -11,26 +11,26 @@
       {
         "pagePath": "pages/index/index",
         "text": "首页",
-        "iconPath": "/image/icon_component.png",
-      "selectedIconPath": "/image/icon_component_HL.png"
+        "iconPath": "/image/shouye.png",
+      "selectedIconPath": "/image/shouye-2.png"
       },
       {
-        "pagePath": "pages/activity/index",
-        "text": "活动",
-        "iconPath": "/image/icon_API.png",
-        "selectedIconPath": "/image/icon_API_HL.png"
+        "pagePath": "pages/kind/index",
+        "text": "分类",
+        "iconPath": "/image/fenlei.png",
+        "selectedIconPath": "/image/fenlei-2.png"
       },
       {
         "pagePath": "pages/shop/index",
         "text": "商城",
-        "iconPath": "/image/icon_component.png",
-        "selectedIconPath": "/image/icon_component_HL.png"
+        "iconPath": "/image/dingdan.png",
+        "selectedIconPath": "/image/dingdan-2.png"
       },
       {
         "pagePath": "pages/personcenter/index",
         "text": "个人中心",
-        "iconPath": "/image/icon_component.png",
-        "selectedIconPath": "/image/icon_component_HL.png"
+        "iconPath": "/image/wode.png",
+        "selectedIconPath": "/image/wode-2.png"
       }
     ]
   },
