代码最多2M，为啥
代码最多2M，为啥

--- a/project.config.json
+++ b/project.config.json
@@ -8,6 +8,7 @@
 		"minified": true,
 		"newFeature": true,
 		"coverView": true,
+		"nodeModules": true,
 		"autoAudits": false,
 		"checkInvalidKey": true,
 		"checkSiteMap": true,
@@ -17,7 +18,7 @@
 			"disablePlugins": [],
 			"outputPath": ""
 		},
-		"nodeModules": true
+		"enhance": true
 	},
 	"appid": "wxfa96b6819c1a1f15",
 	"projectname": "miniprogram-1",
