--- a/cloudfunctions/getProducts/package.json
+++ b/cloudfunctions/getProducts/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "wx-server-sdk": "latest"
+    "lodash": "^4.17.15",
+    "wx-server-sdk": "^0.8.1"
   }
 }
