--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -1,5 +1,6 @@
 {
   "pages": [
+    "pages/personlocation/index",
     "pages/personcenter/index",
     "pages/kind/index",
     "pages/index/index",
